[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-vda5050"
version = "0.1.2"
description = "VDA5050 V3.0.0 Python library for the Wandelbots Nova platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3",
    "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nova_vda5050"]

[tool.ruff]
target-version = "py310"
line-length = 100
